--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplicação de Matrizes Interativa</title>
+    <title>Produto de Matrizes Interativo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="bg-white rounded-2xl shadow-xl p-6 md:p-8 w-full max-w-5xl mx-auto fade-in">
         
         <div class="text-center mb-6">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Simulador de Multiplicação de Matrizes</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Produto de Matrizes Interativo</h1>
             <p class="text-gray-500 mt-2">Defina as dimensões, gere as matrizes e participe do cálculo!</p>
         </div>
 
