--- a/index.html
+++ b/index.html
@@ -73,10 +73,28 @@
                 Código-fonte disponível no <a href="https://github.com/gabrielpcoelho/MatrizProduct" target="_blank" rel="noopener noreferrer" class="text-blue-500 hover:underline">GitHub</a>.
             </p>
             <p class="text-xs text-gray-400 mt-1">
-                Encontrou um bug? Tem alguma suguestão para melhorias Contate: <a href="gabrielpereiracoelho18@gmail.com" class="text-blue-500 hover:underline">seu.email@example.com</a>
+                Encontrou um bug? Tem alguma sugestão para melhorias? Contate: <a href="mailto:gabrielpereiracoelho18@gmail.com" class="text-blue-500 hover:underline">gabrielpereiracoelho18@gmail.com</a>
             </p>
         </footer>
 
+    </div>
+
+    <div id="customNumpad" class="hidden fixed bottom-0 left-0 w-full bg-gray-200 p-2 shadow-lg rounded-t-xl z-50">
+        <div class="grid grid-cols-3 gap-2 text-xl font-bold">
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">1</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">2</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">3</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">4</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">5</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">6</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">7</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">8</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">9</button>
+            <button id="numpad-clear" class="py-3 bg-yellow-400 rounded-lg shadow">C</button>
+            <button class="numpad-btn py-3 bg-white rounded-lg shadow">0</button>
+            <button id="numpad-backspace" class="py-3 bg-red-500 text-white rounded-lg shadow">&larr;</button>
+        </div>
+        <button id="numpad-done" class="w-full mt-2 py-3 bg-blue-600 text-white font-bold rounded-lg shadow">Pronto</button>
     </div>
 
     <script src="script.js"></script>
