--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto de Matrizes Interativo</title>
+
+    <meta property="og:title" content="Ferramenta Interativa de Produto de Matrizes">
+    <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
+    <meta property="og:image" content="im.svg"
+    <meta property="og:url" content="https://matrizproduct.netlify.app/">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ferramenta Interativa de Produto de Matrizes">
+    <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
+    <meta name="twitter:image" content="URL_DA_SUA_IMAGEM_QUADRADA_AQUI.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -77,24 +88,6 @@
             </p>
         </footer>
 
-    </div>
-
-    <div id="customNumpad" class="hidden fixed bottom-0 left-0 w-full bg-gray-200 p-2 shadow-lg rounded-t-xl z-50">
-        <div class="grid grid-cols-3 gap-2 text-xl font-bold">
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">1</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">2</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">3</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">4</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">5</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">6</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">7</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">8</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">9</button>
-            <button id="numpad-clear" class="py-3 bg-yellow-400 rounded-lg shadow">C</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">0</button>
-            <button id="numpad-backspace" class="py-3 bg-red-500 text-white rounded-lg shadow">&larr;</button>
-        </div>
-        <button id="numpad-done" class="w-full mt-2 py-3 bg-blue-600 text-white font-bold rounded-lg shadow">Pronto</button>
     </div>
 
     <script src="script.js"></script>
