--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto de Matrizes Interativo</title>
 
+    <meta name="description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
+
     <meta property="og:title" content="Ferramenta Interativa de Produto de Matrizes">
-    <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
-    <meta property="og:image" content="im.svg"
-    <meta property="og:url" content="https://matrizproduct.netlify.app/">
+    <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://matrizproduct.netlify.app/">
+    <meta property="og:image" content="https://matrizproduct.netlify.app/icone-social.png">
+    <meta property="og:image:type" content="imagens/im.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ferramenta Interativa de Produto de Matrizes">
-    <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
-    <meta name="twitter:image" content="URL_DA_SUA_IMAGEM_QUADRADA_AQUI.jpg">
+    <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
+    <meta name="twitter:image" content="https://matrizproduct.netlify.app/icone-social.png">
+
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/icone-social.png" type="image/png">
+    <link rel="apple-touch-icon" href="/icone-social.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
