--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ferramenta Interativa de Produto de Matrizes">
     <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
-    <meta name="twitter:image" content="https://matrizproduct.netlify.app/icone-social.png">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icone-social.png" type="image/png">
-    <link rel="apple-touch-icon" href="/icone-social.png">
+    <meta name="twitter:image" content="imagens/im.png">
+    <link rel="icon" href="imagens/im.ico" sizes="any">
+    <link rel="icon" href="imagens/im.png" type="image/png">
+    <link rel="apple-touch-icon" href="imagens/im.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
