--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matrizproduct.netlify.app/">
-    <meta property="og:image" content="https://matrizproduct.netlify.app/icone-social.png">
+    <meta property="og:image" content="imagens/im.png">
     <meta property="og:image:type" content="imagens/im.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
