--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <title>Produto de Matrizes Interativo</title>
 
     <meta name="description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
+    
     <meta property="og:title" content="Ferramenta Interativa de Produto de Matrizes">
     <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matrizproduct.netlify.app/">
-    <meta property="og:image" content="imagens/im.png">
-    <meta property="og:image:type" content="imagens/im.png">
+    <meta property="og:image" content="https://matrizproduct.netlify.app/imagens/im.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ferramenta Interativa de Produto de Matrizes">
     <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
-    <meta name="twitter:image" content="imagens/im.png">
-    <link rel="icon" href="imagens/im.ico" sizes="any">
-    <link rel="icon" href="imagens/im.png" type="image/png">
-    <link rel="apple-touch-icon" href="imagens/im.png">
+    <meta name="twitter:image" content="https://matrizproduct.netlify.app/imagens/im.png">
+
+    <link rel="icon" href="/imagens/im.ico" sizes="any">
+    <link rel="icon" href="/imagens/im.png" type="image/png">
+    <link rel="apple-touch-icon" href="/imagens/im.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
