--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto de Matrizes Interativo</title>
 
-    <meta name="description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa. Ideal para estudantes e entusiastas da matemática.">
+    <meta name="description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
     
     <meta property="og:title" content="Ferramenta Interativa de Produto de Matrizes">
     <meta property="og:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matrizproduct.netlify.app/">
-    <meta property="og:image" content="https://matrizproduct.netlify.app/imagens/im.png">
+    <meta property="og:image" content="https://matrizproduct.netlify.app/imagens/icone-principal.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
@@ -19,11 +19,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ferramenta Interativa de Produto de Matrizes">
     <meta name="twitter:description" content="Aprenda e pratique a multiplicação de matrizes de forma visual e interativa.">
-    <meta name="twitter:image" content="https://matrizproduct.netlify.app/imagens/im.png">
+    <meta name="twitter:image" content="https://matrizproduct.netlify.app/imagens/icone-principal.png">
 
-    <link rel="icon" href="/imagens/im.ico" sizes="any">
-    <link rel="icon" href="/imagens/im.png" type="image/png">
-    <link rel="apple-touch-icon" href="/imagens/im.png">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +65,7 @@
             <span id="presentationModeLabel" class="font-semibold text-gray-400 transition-colors">Apresentação</span>
             <label for="modeToggle" class="relative inline-flex items-center cursor-pointer">
                 <input type="checkbox" id="modeToggle" class="sr-only peer" checked>
-                <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
+                <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
             </label>
             <span id="interactiveModeLabel" class="font-semibold text-gray-700 transition-colors">Interativo</span>
         </div>
@@ -98,25 +100,6 @@
             </p>
         </footer>
 
-    </div>
-
-    <div id="customNumpad" class="hidden fixed bottom-0 left-0 w-full bg-gray-200 p-2 shadow-lg rounded-t-xl z-50">
-        <div class="grid grid-cols-4 gap-2 text-xl font-bold">
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">1</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">2</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">3</button>
-            <button data-key="backspace" class="py-3 bg-yellow-400 rounded-lg shadow">&larr;</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">4</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">5</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">6</button>
-            <button data-key="-" class="py-3 bg-gray-300 rounded-lg shadow">-</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">7</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">8</button>
-            <button class="numpad-btn py-3 bg-white rounded-lg shadow">9</button>
-            <button data-key="clear" class="py-3 bg-red-500 text-white rounded-lg shadow">C</button>
-            <button class="numpad-btn col-span-2 py-3 bg-white rounded-lg shadow">0</button>
-            <button data-key="done" class="col-span-2 py-3 bg-blue-600 text-white font-bold rounded-lg shadow">Pronto</button>
-        </div>
     </div>
 
     <script src="script.js"></script>
